# po-k

./: .gitignore  Cargo.toml  README.md  plan.md
crates/po-k/: Cargo.toml
crates/po-k/src/: auth.rs  config.rs  config_skeleton.yaml  config_watch.rs  distill.rs  event_bus.rs  events_store.rs  gateway_proto.rs  git.rs  hook_listener.rs  ipc.rs  jsonl_tail.rs  live_reload.rs  llm.rs  main.rs  mcp_server.rs  permissions.rs  profile.rs  project_discovery.rs  recovery.rs  session.rs  state.rs  status.rs  systemd_install.rs  text.rs  turn.rs  ws_dispatcher.rs  xpok_client.rs  zellij.rs
crates/po-k/src/cmd/: config_cmd.rs  distill_cmd.rs  gateway.rs  hook.rs  init.rs  mcp.rs  memory.rs  mod.rs  serve.rs  service.rs  skill.rs  status.rs
crates/po-k/src/core/: capabilities.rs  control.rs  events.rs  hooks.rs  messages.rs  mod.rs  perms.rs  projects.rs  sessions.rs
crates/po-k/src/http/: control.rs  events.rs  health.rs  help.md  help.rs  hooks_in.rs  messages.rs  mod.rs  perms.rs  projects.rs  sessions.rs
crates/po-k_collector/: Cargo.toml
crates/po-k_collector/src/: heartbeat.rs  main.rs  meta.rs  projects.rs  scan.rs  ship.rs  watermark.rs
crates/po-k_core/: Cargo.toml
crates/po-k_core/src/: event.rs  lib.rs  session_key.rs
crates/po-k_proto/: Cargo.toml
crates/po-k_proto/src/: lib.rs
crates/po-k_server/: Cargo.toml
crates/po-k_server/migrations/: 0001_init.sql  0002_api_key_hash.sql  0003_fts5.sql  0004_topics.sql  0005_embeddings.sql
crates/po-k_server/src/: admin.rs  auth.rs  bootstrap.rs  bus.rs  distill.rs  embed.rs  ingest.rs  llm.rs  main.rs  mcp.rs  search.rs  state.rs  stream.rs  topics.rs  transcript.rs  ui.rs
crates/po-k_server/templates/: base.html  login.html  projects.html  search.html  sessions.html  transcript.html  transcript_older.html  transcript_page.html
crates/po-k_server/templates/admin/: dashboard.html  keys.html  mcp.html  projects.html  topic.html  topics.html  users.html
crates/pok-proto/: Cargo.toml
crates/pok-proto/src/: lib.rs  profile.rs
crates/xpo-k/: Cargo.toml
crates/xpo-k/src/: auth.rs  cmd.rs  config.rs  lib.rs  live.rs  main.rs  merge.rs  registry.rs  routed.rs  state.rs  store.rs  ws.rs
crates/xpo-k/src/http/: health.rs  mod.rs  profiles.rs
crates/xpo-k/tests/: loopback.rs
hermes-plugin/: __init__.py  client.py  plugin.yaml  tools.py
