[workspace]
resolver = "2"
members = ["crates/po-k"]

[workspace.package]
edition = "2021"
version = "0.10.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/t44k/po-k"
authors = ["t44k <tamas@leftshark.sh>"]
rust-version = "1.80"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "io-std", "net", "process", "signal", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
