[workspace]
resolver = "2"
members = ["crates/po-k", "crates/xpo-k", "crates/pok-proto"]

[workspace.package]
edition = "2021"
version = "0.11.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/t44k/po-k"
authors = ["t44k <tamas@leftshark.sh>"]
rust-version = "1.80"

[workspace.dependencies]
anyhow = "1"
async-stream = "0.3"
axum = { version = "0.8", features = ["macros", "json", "tokio", "ws"] }
dashmap = "6"
futures-util = "0.3"
hostname = "0.4"
matchit = "0.8"
serde_urlencoded = "0.7"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
pok-proto = { path = "crates/pok-proto" }
base64 = "0.22"
http-body-util = "0.1"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
indexmap = { version = "2", features = ["serde"] }
notify = "8"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "io-std", "net", "process", "signal", "time", "sync"] }
tokio-stream = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
