[package]
name = "po-k_collector"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Tails Claude Code session JSONLs and ships events to po-k_server."

[[bin]]
name = "po-k_collector"
path = "src/main.rs"

[dependencies]
po-k_core = { workspace = true }
po-k_proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
notify-debouncer-full = { workspace = true }
blake3 = { workspace = true }
toml = { workspace = true }
