[package]
name = "po-k_server"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Central ingest, storage, and (later) UI/MCP for po-k."

[[bin]]
name = "po-k_server"
path = "src/main.rs"

[dependencies]
po-k_core = { workspace = true }
po-k_proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
askama = { workspace = true }
blake3 = { workspace = true }
async-trait = { workspace = true }
