[package]
name = "pok-proto"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Shared wire protocol + profile types for po-k and xpo-k."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
uuid = { workspace = true }
